# cmake4eclipse

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  pom.xml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: maven.yml  upload-release.yml
de.marw.cdt.cmake-feature/: .project  feature.properties  feature.xml  pom.xml
de.marw.cdt.cmake-feature/sourceTemplateFeature/: feature.properties
de.marw.cdt.cmake.core/: .classpath  .project  about.html  build.properties  cmake4eclipse.launch  cmake4eclipsecdt.launch  plugin.properties  plugin.xml  pom.xml
de.marw.cdt.cmake.core/doc/: contexts_CMake4CDT.xml  toc.xml  topics_Tasks.xml
de.marw.cmake/: .classpath  .options  .project  about.html  build.properties  plugin.properties  plugin.xml  pom.xml
de.marw.cmake.cdt/: .options  .project  plugin.properties  plugin.xml  pom.xml
de.marw.cmake.cdt.lsp.arm/: .classpath  .project  build.properties  help_content_extension.xml  plugin.xml  pom.xml
de.marw.cmake.cdt.lsp.arm.tests/: .project  pom.xml
de.marw.cmake.cdt.lsp.arm/doc/: compiler.xhtml
de.marw.cmake.cdt.lsp.hpenonstop/: .project  plugin.xml  pom.xml
de.marw.cmake.cdt.lsp.hpenonstop.tests/: .project  pom.xml
de.marw.cmake.cdt.lsp.intel/: .classpath  .project  help_content_extension.xml  plugin.xml  pom.xml
de.marw.cmake.cdt.lsp.microsoft/: .project  about.html  help_content_extension.xml  plugin.xml  pom.xml
de.marw.cmake.cdt.lsp.microsoft.tests/: .project  pom.xml
de.marw.cmake.cdt.lsp.nvidia/: .project  help_content_extension.xml  plugin.xml  pom.xml
de.marw.cmake.cdt.lsp.nvidia.tests/: .project  pom.xml
de.marw.cmake.cdt.mbs/: .project  cmake4eclipse.launch  plugin.properties  pom.xml
de.marw.cmake.cdt.mbs.ui/: .project  about.html  build.properties  plugin.properties  plugin.xml  pom.xml
de.marw.cmake.cdt.tests/: pom.xml
de.marw.cmake.cdt/schema/: participant.exsd
de.marw.cmake.tests/: .project  pom.xml
de.marw.cmake/schema/: participant.exsd
de.marw.cmake4eclipse.feature/: .project  feature.properties  feature.xml  pom.xml
de.marw.cmake4eclipse.mbs/: .classpath  build.properties  cmake4eclipse.launch  plugin.xml  pom.xml
de.marw.cmake4eclipse.mbs.ui/: .classpath  .project  build.properties  plugin.xml  pom.xml
de.marw.cmake4eclipse.mbs.ui/doc/: contexts_CMake4CDT.xml  help_contexts.xml  toc.xml
parent/: .project  pom.xml
releng/: .project  cmake4eclipse.launch
releng/client-target-platform/: ITE-client-runtime.target  pom.xml
releng/comp-update/: .project  compositeArtifacts.xml  compositeContent.xml
releng/de.marw.cdt.cmake-repo/: .project  category.xml  pom.xml
releng/de.marw.cdt.cmake-target/: .project  de.marw.cdt.cmake-target-8.7.target  de.marw.cdt.cmake-target-9.4.target  de.marw.cdt.cmake-target-9.6.target  de.marw.cdt.cmake-target.target  pom.xml
releng/de.marw.cdt.cmake.repo/: .project  category.xml  pom.xml
releng/repo/: .project  category.xml  pom.xml
releng/targetplatform/: .project  pom.xml  (+4 more)
testprojects/C-1src/src/: CMakeLists.txt  main.c
testprojects/C-flat/: .cproject  .project  CMakeLists.txt  main.c
testprojects/C-inclpaths/: .cproject  .project  CMakeLists.txt
testprojects/C-inclpaths/src/: CMakeLists.txt  config.h.in  main.c
testprojects/C-subsrc/src/: CMakeLists.txt  main.c  util1.c
testprojects/C-subsrc/src/src-sub/: CMakeLists.txt  main1.c
(+442 files in other folders)
